c.lib 1.195 (3.9.2005)

- In __time_delay() the CheckIO() test was wrong and should have
  tested for a request still in progress. Fixed.

- Modified select() to support plain files, too. The new code now
  compares the current file position against the current file size,
  if that file is on a file system, or simply checks if there is
  any data in the file (which works for the default PIPE: device).

- The raw file descriptor structure member fd_Position is now
  always updated, regardless of whether the file supports random
  access or not.

- The wildcard escape character used in __wildcard_expand_init() was
  wrong. It should have been "'" but it was "`". Fixed.

- The startup code now references the linker symbol generated for
  the user-supplied main() function.

- log(+/-0), logb(+/-0), log10(+/-0) now return -infinity.

- getcwd() now considers a buffer size of 0 an error, and it sets
  the errno code to ERANGE if the buffer is too small.

- With Unix path semantics enabled, rename() now fails if either
  the old or the new name are empty strings. Same thing for
  opendir(), utime(), unlink(), chown(), link(), readlink(),
  realpath(), chdir(), access(), stat(), rmdir(), lstat(),
  chmod(), statfs() and open()/fopen().

- Fixed several issues with the formatted output of strftime()
  for the "C" locale: "%p" could return " PM", "%c" is now
  equivalent to "%a %b %e %T %Y", "%x" is equivalent to "%m/%d/%y"
  and "%X" is now equivalent to "%T".

- The 68020/030/040/060 versions of the library now include the
  64 bit integer conversion code. The plain 68000 version does not.

- The 64 bit integer conversion code used in by the scanf() family
  was broken due to a misplaced overflow check, which had the cruel
  effect of triggering for 32 bit integers as well. Fixed.

- DoTimer() did not allocate the local MsgPort correctly. Fixed.


c.lib 1.194 (15.7.2005)

- Added getopt_long to libunix.a <tfrieden>
